# gcnn

./: LICENSE  README.md  pyproject.toml
.github/workflows/: testing.yml
gcnn/: __init__.py
gcnn/layers/: __init__.py  gcnn.py  graph_conv.py  graph_readout.py
gcnn/utils/: __init__.py  gnn.py  grid_graph.py
test/: test_graph.py  test_graph_conv.py  test_graph_integration.py  test_graph_readout.py  test_grid_graph.py
